--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">TicTacToe</string>
+    <string name="shr_hint_email_address">Email Address</string>
+    <string name="shr_hint_password">Password</string>
+    <string name="button_login">Sign in</string>
+    <string name="shr_button_cancel">Cancel</string>
+    <string name="button_login_anonymously">Continue as guest</string>
+    <string name="create_an_account">Create account</string>
+    <string name="shr_hint_verify_password">Verify password</string>
+    <string name="button_create_account">Continue</string>
 </resources>
