--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="firebase_sign_up_fail">Sign up fail</string>
     <string name="firebase_auth_instance_null">Firebase authentication instance must be initialized</string>
     <string name="action_replay">Play Again?</string>
+    <string name="play_vs_friend">Play vs friend</string>
 
 
 </resources>
