Implemented highscore feature where every draw is shown to the user when navigating ti the highscore tab.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,10 @@
     <string name="firebase_auth_instance_null">Firebase authentication instance must be initialized</string>
     <string name="action_replay">Play Again?</string>
     <string name="play_vs_friend">Play vs friend</string>
+    <string name="highscore">Highscore</string>
+    <string name="draws">Draws</string>
+    <string name="wins">Wins</string>
+    <string name="lost">Lost</string>
 
 
 </resources>
