Play solo functionality implemented and refined

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="draws">Draws</string>
     <string name="wins">Wins</string>
     <string name="lost">Lost</string>
+    <string name="play_solo">PLAY SOLO</string>
 
 
 </resources>
